--- a/TreeVisualization/MainWindow.xaml
+++ b/TreeVisualization/MainWindow.xaml
@@ -5,41 +5,60 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TreeVisualization"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="MainWindow" MinHeight="200" MinWidth="200" Height="Auto" Width="Auto"
         d:DataContext="{x:Static local:NodeDesignModel.Instance}">
         
     <Window.Resources>
         <DataTemplate DataType="{x:Type local:NodeViewModel}">
-
+            
             <Grid Background="White">
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition MinWidth="25" Width="Auto"/>
-                    <ColumnDefinition MinWidth="25" Width="Auto"/>
+                    <ColumnDefinition MinWidth="7" Width="*"/>
+                    <ColumnDefinition MinWidth="7" Width="*"/>
+                    <ColumnDefinition MinWidth="7" Width="*"/>
+                    <ColumnDefinition MinWidth="7" Width="*"/>
                 </Grid.ColumnDefinitions>
 
                 <Grid.RowDefinitions>
                     <RowDefinition MinHeight="25" Height="Auto"/>
+                    <RowDefinition Height="1"/>
                     <RowDefinition MinHeight="25" Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Ellipse Grid.ColumnSpan="2"
-                         Margin="0 15"
+                <Line Stroke="Black" StrokeThickness="1" Grid.ColumnSpan="4" HorizontalAlignment="Center" VerticalAlignment="Top"
+                      Y2="{Binding Margin.Top, ElementName=Circle}"
+                      Visibility="{Binding IsRoot, Converter={local:Bool2VisibilityHiddenConverter}, ConverterParameter=true}"/>
+
+                <Ellipse Grid.ColumnSpan="4"
+                         x:Name="Circle"
+                         Margin="0 10 0 10"
                          Fill="{Binding IsRed, Converter={local:Bool2BlackRedConverter}}" 
                          HorizontalAlignment="Center" VerticalAlignment="Center"
                          Width="{Binding ActualHeight, ElementName=NodeKey}"
                          Height="{Binding ActualHeight, ElementName=NodeKey}"/>
-
+                
                 <TextBlock x:Name="NodeKey" 
-                           Grid.ColumnSpan="2"
+                           Grid.ColumnSpan="4"
                            HorizontalAlignment="Center" VerticalAlignment="Center"
                            Padding="3"
                            Text="{Binding Key}"
                            FontSize="10"
                            Foreground="White"/>
 
-                <ContentPresenter Grid.Row="1" Grid.Column="0" Content="{Binding Left}" x:Name="LeftNode"/>
-                <ContentPresenter Grid.Row="1" Grid.Column="1" Content="{Binding Right}" x:Name="RightNode"/>
+                <Line Stroke="Black" StrokeThickness="1" Grid.ColumnSpan="4" HorizontalAlignment="Center" VerticalAlignment="Bottom"
+                      Visibility="{Binding IsLeaf, Converter={local:Bool2VisibilityHiddenConverter}, ConverterParameter=true}"
+                      Y1="{Binding Margin.Bottom, ElementName=Circle}"
+                      Y2="{Binding Margin.Top, ElementName=RightNode}"/>
+
+                <Border Grid.Row="1" Grid.Column="1" Background="Black"
+                        Visibility="{Binding HasLeftNode, Converter={local:Bool2VisibilityHiddenConverter}}"/>
+                
+                <Border Grid.Row="1" Grid.Column="2" Background="Black" 
+                        Visibility="{Binding HasRightNode, Converter={local:Bool2VisibilityHiddenConverter}}"/>
+
+                <ContentPresenter Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Content="{Binding Left}" x:Name="LeftNode"/>
+                <ContentPresenter Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" Content="{Binding Right}" x:Name="RightNode"/>
 
             </Grid>
 
